# brand-generator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/: PRD.md
prompts/: brand_evaluator_system.txt
src/: __init__.py  cli.py
src/agent/: __init__.py  orchestrator.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  repository.py
src/generator/: __init__.py  candidate_generator.py  genetic_optimizer.py
src/llm/: __init__.py  base.py  claude_scorer.py  factory.py  scorer.py
src/llm/providers/: __init__.py  anthropic.py  gemini.py  lmstudio.py  ollama.py  openai.py
src/scoring/: __init__.py  heuristic_scorer.py  phonetic_models.py
src/trademark/: __init__.py  clearance_checker.py  euipo_client.py  models.py  similarity.py
